Updates logo, bg color (blue).

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,10 +6,12 @@
 :root {
   --fg: #ddd;
   --fg-dim: #888;
-  --bg: rgb(6, 1, 43);
+  /* --bg: rgb(6, 1, 43); */
+  --bg: #1c4688;
   --bg2: rgb(44, 8, 87);
   --bg3: rgb(24, 0, 65);
-  --bg4: rgb(223, 56, 230);
+  /* --bg4: rgb(223, 56, 230); */
+  --bg4: rgb(74, 152, 240);
   --max-width: 1320px;
   --font-size: 16px;
 }
