Fixes "/2" to "0/2" vote count.

--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -43,7 +43,7 @@
       </li>
     </ul>
     <div class="status">
-      Collected votes: {{ data.currentResultRow?.total }} / {{ data.onlineIds?.size }}
+      Collected votes: {{ data.currentResultRow?.total || 0 }} / {{ data.onlineIds?.size }}
     </div>
   </div>
 
